src/d09/snapshots/aoc2023__d09__help__t__run.snap
---
source: src/d09/help.rs
expression: parse_to_lines(EXAMPLE.trim())
---
[
    0 3 6 9 12 15,
    1 3 6 10 15 21,
    10 13 16 21 30 45,
]
