src/d09/snapshots/aoc2023__d09__help__t__run_diffs.snap
---
source: src/d09/help.rs
expression: "nums.iter().map(get__tower).collect::<Vec<_>>()"
---
[
    [
        0 3 6 9 12 15,
        3 3 3 3 3,
    ],
    [
        1 3 6 10 15 21,
        2 3 4 5 6,
        1 1 1 1,
    ],
    [
        10 13 16 21 30 45,
        3 3 5 9 15,
        0 2 4 6,
        2 2 2,
    ],
]
